@@ -1,0 +1,14 @@
+WARNING: xref-with-short-size.pdf: offset 16227: Cross-reference stream data has the wrong size; expected = 52; actual = 56
+1/0: compressed; stream = 5, index = 1
+2/0: compressed; stream = 5, index = 0
+3/0: uncompressed; offset = 15
+4/0: compressed; stream = 5, index = 5
+5/0: uncompressed; offset = 15548
+6/0: compressed; stream = 5, index = 6
+7/0: compressed; stream = 5, index = 4
+8/0: compressed; stream = 5, index = 2
+9/0: uncompressed; offset = 150
+10/0: compressed; stream = 5, index = 3
+11/0: compressed; stream = 5, index = 7
+12/0: compressed; stream = 5, index = 8
+qpdf: operation succeeded with warnings; resulting file may have some problems
